--- a/main.css
+++ b/main.css
@@ -105,6 +105,7 @@ figure,.social-links__wrapper{
     display: block;
     align-items: center;
     justify-items: center;
+    margin-top: 24px;
    
 }
 .social-links{
