--- a/main.css
+++ b/main.css
@@ -99,6 +99,7 @@ figure,.social-links__wrapper{
     text-align: center;
     align-items: center;
     justify-items: center;
+    margin-top: 24px;
   
 }
 .links{
