--- a/main.css
+++ b/main.css
@@ -62,8 +62,7 @@ body{
   
 }
 .social-links__wrapper, .social-links__container{
-    margin-left: 24px;
-    margin-right: 24px;
+    margin: 206.5px 156px; 
     
 
 }
