--- a/main.css
+++ b/main.css
@@ -46,13 +46,16 @@ img {
 
 
 /* ||MOBILE FIRST DESIGN*/
+html{
+    scroll-behavior: smooth;
+    font-size: 16px;
+}
 body{
+    min-width: 100%;
+    max-height: 100vh;
     background-color: var(--GREY-900);
     font-family: "Inter",sans-serif;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px;
+    display:grid;  
     color:var(--WHITE)
 }
 .social-links__container{
