--- a/main.css
+++ b/main.css
@@ -56,7 +56,15 @@ body{
     background-color: var(--GREY-900);
     font-family: "Inter",sans-serif;
     display:grid;  
+    overflow: hidden;
+    place-content: center;
     color:var(--WHITE)
+}
+h1{
+    margin: 0;
+    padding:0;
+    font-size: inherit;
+    font-weight: normal;
 }
 .social-links__container{
     width: 327px;
