--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ a:any-link{
 }
 
 /*|| CARD*/
-.social-links__card{
+.social-profile__card{
     max-width:  327px;
     min-height: 579px;
     padding: 1.5rem;
@@ -102,77 +102,53 @@ a:any-link{
   margin-bottom:0.25rem;
 }
 .location{
-    color:var(--GREEN);
-    font-size: var(--TEXT-PRESET-2);
-    line-height: 150%;
+  font: var(--TEXT-PRESET-2-BOLD);
+  color:var(--GREEN);  
   margin-bottom:1.5rem;
 }
 .bio{
   font:var(--TEXT-PRESET-2);
   color:var(--WHITE);
 }
-  
-  
 
-
-.social-links__wrapper{
-    margin: 40px;
-    display: block;
-    justify-items: center;
-}
-figure, img{
-    align-items: center;
-    border: 0px solid black;
-    border-radius: 100%;
-    width:88px;
-    height: 88px;
-}
-figure,.social-links__wrapper{
-    margin-top: 4opx;
-}
-.info, figure{
-    margin:24px;
-}
-
-
-.info{
-    
-    display: block;
-    justify-items: center;
-    text-align: center;
-}
-.description{
-    display: inline;
-    text-align: center;
-    align-items: center;
-    justify-items: center;
-    margin-top: 24px;
-  
-}
-.links{
-    display: block;
-    align-items: center;
-    justify-items: center;
-    margin-top: 24px;
-   
+/* || CARD-LINKS*/
+.card-links{
+  display:flex;
+  flex-flow:column;
+  align-items:center;
+  gap:1rem;
 }
 .social-links{
-    background-color: var(--GREY-700);
-    border:none;
-    border-radius: 8px;
-    margin: 12px;
-    padding: 10px;
-    width: 279px;
-    height: 45px;  
-    align-items: center;
-    text-align: center;
-    justify-items: center;
-    font-size: var(--TEXT-PRESET-2);
-    position: relative;    
-   
+  display:block;
+  color:white;
+  width:100%;
+  height:45px;
+  border-radius:8px;
+  font:var(--TEXT-PRESET-2-BOLD);
+  background-color:var(--GREY-700);
+ }
+.card-link__Github{
+  padding:0.75rem 7.19rem;
 }
-
-@media screen and (min-width:480px) {
+.card-link__FrontendMentor{
+  padding:0.75rem 5.13rem;
+}
+.card-link__LinkedIn{
+  padding:0.75rem 6.88rem;
+}
+.card-link__Twitter{
+  padding:0.75rem 7.15rem;
+}
+.card-link__Instagram{
+  padding:0.75rem 6.53rem;
+}
+/* Tablet */
+@media screen and (min-width:768px){
+  /* ||PROFILE CARD*/
+  .social-profile__card{
+}
+}
+@media screen and (min-width:768px) {
     .social-links:hover{
         background-color:var(--GREY-700);
        
