Fixes #1 and Fixes #2
This pull request includes two key updates:

Removed Unnecessary Margin: The margin-top property in the .profile-picture__avatar class has been removed to streamline the layout. This change enhances the visual consistency of the profile picture component across the application.

Typo Correction: A typo in the variable declaration for --FF has been corrected to ensure proper functionality and maintainability of the code.

These changes contribute to cleaner code and improved design consistency.

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ img {
   --WHITE: #fff;
 
   /* TYPOGRAPHY */
-  --FF: "Inter, sans-serif";
+  --FF: "Inter", sans-serif;
   --TEXT-PRESET-1: 600 1.5rem/150% var(--FF);
   --TEXT-PRESET-2: normal 0.875rem/150% var(--FF);
   --TEXT-PRESET-2-BOLD: bold 0.875rem/150% var(--FF);
@@ -91,7 +91,6 @@ a:any-link{
   border-radius:50%;
   overflow:hidden;
   margin-bottom:1.5rem;
-  margin-top: 2.5rem;
 }  
 .profile-picture__avatar img{
   width:100%;
